$Id: CHANGELOG,v 1.14 2002/06/27 20:09:17 helios Exp $


TODO:
* Rethink documentation flow and rewrite?
* Port connection portion to other DBMS?  Genericize the module?  Start with PostgreSQL.
* check for mandatory conf directives / syntax quit if not
* GNU autoconf
* merge server config into vh config
* port to Apache 2.x
* does determining table name in massvirtual mode upon every request
  cause performance degradation?  If so fix.
* LogSQLRotateLogs directive with daily/monthly/weekly/etc.
* new format char: IP as bigint?
* socket-based middleman daemon with configurable conns?


CHANGES:

1.17:
* Renamed the module mod_log_sql to conform to the project goal of
  database-inspecificity.
* Added capability of logging Notes field.  This is useful for folks using
  custom modules that provide loggable info in the notes, e.g. mod_gzip.
  A new directive MySQLWhichNotes configures which notes to log to the
  notes_log table.
* Added capability of logging inbound and outbound headers. New directives
  LogSQLWhichHeadersIn and LogSQLWhichHeadersOut configure which headers to
  capture.  Headers are stored in their own table or tables.
* Fixed potential segfault in preserve file function due to silly pfclose
  placement. (Only affected user if the preserve file couldn't
  be opened.)
* Changed default socket file to /tmp/mysql.sock because that's the
  default on a compiled MySQL.
* Also check for '-' when I'm creating the table when MySQLMassVirtualHosting
  is on, and change it to underscore.  (Already did this with '.')
* Took away the prepend of /tmp to the preserve filename.  Now the
  user can specify whatever local path they want.  I figure that
  filesystem permissions will prevent people from doing anything 
  really dumb, and people have requested this change.
* Better checking in the extract_cookie routine.  Before, it could
  segfault if a person specified "c" but didn't define MySQLWhichCookie.